--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@anthropic-ai/bedrock-sdk": "^0.24.0",
     "@anthropic-ai/sdk": "^0.60.0",
     "@auth/drizzle-adapter": "^1.7.2",
     "@radix-ui/react-avatar": "^1.1.1",
@@ -30,7 +31,7 @@
     "drizzle-orm": "^0.36.1",
     "express": "^4.21.1",
     "lucide-react": "^0.460.0",
-    "next": "15.1.0",
+    "next": "^15.5.2",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.3",
     "postgres": "^3.4.4",
@@ -51,7 +52,7 @@
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
     "autoprefixer": "^10.4.20",
-    "drizzle-kit": "^0.30.0",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^9.15.0",
     "eslint-config-next": "15.1.0",
     "postcss": "^8.5.0",
